# vegehead

./: .buildinfo  CHANGES.rst  LICENSE  LICENSE.rst  Makefile  Pipfile  README.rst  conf.py  index.html  index.rst  introduction.rst  objects.inv  pyproject.toml  requirements.txt
_build/doctrees/: CHANGES.doctree  LICENSE.doctree  README.doctree  anise_drink.doctree  apricot_balls.doctree  baking_soda.doctree  book.doctree  cabbage_salad.doctree  chickpea_curry.doctree  chili.doctree  chocolate_chip_cookies.doctree  cpbb_pie.doctree  delicious_dal.doctree  environment.pickle  hummus.doctree  ice_cream.doctree  index.doctree  introduction.doctree  italian_lentil_soup.doctree  mashed_kumara.doctree  mung_dal.doctree  nut_butter_muffins.doctree  orange_squash_soup.doctree  red_cabbage_salad.doctree  tarator.doctree  tempeh_sauerkraut.doctree  title_page.doctree
_build/html/: .buildinfo  anise_drink.html  (+24 more)
_static/: my-style.css
_templates/: layout.html
docs/: Makefile  conf.py  conf.py.orig  donate.rst  index.rst  introduction.rst  recipes_bathroom.rst  recipes_savory.rst  recipes_sweet.rst  savory.rst  sweet.rst  testimonials.rst  tip_jar.rst  toc.rst
recipes/: anise_drink.rst  apricot_balls.rst  baking_soda.rst  black_bean_brownies.rst  chili.rst  chocolate.rst  chocolate_1.rst  chocolate_2.rst  chocolate_chip_cookies.rst  cpbb_pie.rst  ice_cream.rst  italian_lentil_soup.rst  mashed_kumara.rst  moroccan_chili.rst  mung_dal.rst  nut_butter_muffins.rst  orange_squash_soup.rst  peanut_butter_cookies.rst  pumpkin_hotpot.rst  rhubarb_sauce.rst  tempeh_sauerkraut.rst
(+102 files in other folders)
