[tool.poetry]
name = "vegehead"
version = "3.5.1"
description = "A cookbook"
authors = ["Alex Raichev <alex@raichev.net>"]
license = "CC BY-NC-SA 4.0"

[tool.poetry.dependencies]
python = "^3.7||^3.8"
sphinx = "^3"
ghp-import = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
